Implemented determination of file-versioning-errors

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -6,3 +6,6 @@ config_patching_mode_single_file#:#Single File
 config_ref_id_file#:#Ref-Id of File
 config_patching_mode_all_files#:#All Files
 config_info_patching_mode#:#Warning: The plugin should always be thoroughly tested on a single file before being used on all files!
+
+error_no_patching_mode#:#Error: No patching mode declared. Modes can be selected inside the plugin configuration.
+error_no_file_for_ref_id#:# Error: No file found for ref_id %s. Please specify a valid ref_id inside the plugin configuration.
