--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -6,3 +6,6 @@ config_patching_mode_single_file#:#Einzelne Datei
 config_ref_id_file#:#Ref-Id der Datei
 config_patching_mode_all_files#:#Alle Dateien
 config_info_patching_mode#:#Warnung: Das Plugin sollte stets gründlich mit einer einzelnen Datei getestet werden, bevor es auf alle Dateien angewandt wird!
+
+error_no_patching_mode#:#Fehler: Kein Reparatur-Modus angegeben. Modi können in der Plugin Konfiguration ausgewählt werden.
+error_no_file_for_ref_id#:# Fehler: Keine Datei mit der ref_id %s gefunden. Bitte geben Sie in der Plugin Konfiguration eine gültige Ref-Id an.
