--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -9,3 +9,9 @@ config_info_patching_mode#:#Warnung: Das Plugin sollte stets gründlich mit eine
 
 error_no_patching_mode#:#Fehler: Kein Reparatur-Modus angegeben. Modi können in der Plugin Konfiguration ausgewählt werden.
 error_no_file_for_ref_id#:# Fehler: Keine Datei mit der ref_id %s gefunden. Bitte geben Sie in der Plugin Konfiguration eine gültige Ref-Id an.
+
+form_title_single_file_patcher#:#Repariere einzelne Datei
+form_input_ref_id_file#:#Ref-Id der Datei
+form_cmd_button_patch#:#Reparieren
+
+tab_single_file_tester#:#Einzeldatei-Tester
