--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -7,6 +7,7 @@ config_ref_id_file#:#Ref-Id of File
 config_patching_mode_all_files#:#All Files
 config_info_patching_mode#:#Warning: The plugin should always be thoroughly tested on a single file before being used on all files!
 
+error_plugin_not_activated#:#Error: Plugin not activated.
 error_no_patching_mode#:#Error: No patching mode declared. Modes can be selected inside the plugin configuration.
 error_no_file_for_ref_id#:# Error: No file found for ref_id %s. Please specify a valid ref_id inside the plugin configuration.
 
@@ -17,9 +18,15 @@ form_cmd_button_show_report#:#Show Error Report
 tab_single_file_tester#:#Single File Tester
 
 table_title_error_report#:#Error Report for File with Ref-Id %s
+
+table_column_current_version#:#Current Version
+table_column_correct_version#:#Correct Version
+table_column_current_path#:#Current Path
+table_column_correct_path#:#Correct Path
 table_column_numbered_correctly#:#Numbered Correctly
 table_column_stored_correctly#:#Stored Correctly
 table_column_folder_exists#:#Folder Exists
 table_column_file_exists#:#File Exists
 table_column_patch_possible#:#Patch Possible
+
 table_cmd_button_patch#:#Patch
