Created patching functionality (critical, untested parts currently commented out) and confirmation request

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -29,6 +29,7 @@ error_report_info_file_dir#:#Verzeichnis in welchem Dateien gespeichert werden. 
 
 table_column_current_version#:#Derzeitige Version
 table_column_correct_version#:#Korrekte Version
+table_column_uploaded_by#:#Hochgeladen von
 table_column_current_path#:#Derzeitiger Pfad
 table_column_correct_path#:#Korrekter Pfad
 table_column_numbered_correctly#:#Korrekt nummeriert
@@ -38,3 +39,8 @@ table_column_file_exists#:#Datei vorhanden
 table_column_patch_possible#:#Patch möglich
 
 table_cmd_button_patch#:#Patchen
+
+confirmation_question_patch#:#Wollen Sie die Datei mit der Ref-Id %s wirklich patchen? Dabei würden reparable Versionen gepatcht und irreparable Versionen gelöscht.
+confirmation_question_patch_with_file_deletion#:#Wollen Sie die Datei mit der Ref-Id %s wirklich patchen? Dabei würde die Datei gelöscht da festgestellt wurde, dass all ihre Versionen irreparabel beschädigt sind.
+confirmation_table_title_fixable_versions#:#Reparable Versionen
+confirmation_table_title_unfixable_versions#:#Irreparable Versionen
