--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -29,6 +29,7 @@ error_report_info_file_dir#:#Directory in which files are stored. The paths in t
 
 table_column_current_version#:#Current Version
 table_column_correct_version#:#Correct Version
+table_column_uploaded_by#:#Uploaded by
 table_column_current_path#:#Current Path
 table_column_correct_path#:#Correct Path
 table_column_numbered_correctly#:#Numbered Correctly
@@ -38,3 +39,8 @@ table_column_file_exists#:#File Exists
 table_column_patch_possible#:#Patch Possible
 
 table_cmd_button_patch#:#Patch
+
+confirmation_question_patch#:#Do you really want to patch the file with ref-id %s? Doing so will lead to fixable versions being patched and unfixable ones being deleted.
+confirmation_question_patch_with_file_deletion#:#Do you really want to patch the file with ref-id %s? Doing so will lead to the file being deleted as all its versions have been ascertained unfixable.
+confirmation_table_title_fixable_versions#:#Fixable Versions
+confirmation_table_title_unfixable_versions#:#Unfixable Versions
